# cpp20-cmake-vcpkg-template

./: .env  CMakeLists.txt  Makefile  README.md  main.cpp
